--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<marquee direction="left" loop="">Welcome to Acciojobs!</marquee>
+	<a href=
     <script type="text/javascript" src="./script.js">
 </script>
 
