--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<marquee direction="left" loop="">Welcome to Acciojobs!</marquee>
-	<a href=
+	<a href="https://acciojob.com/blog/https://acciojob.com/blog/">Blog</a>
     <script type="text/javascript" src="./script.js">
 </script>
 
