--- a/main.html
+++ b/main.html
@@ -9,8 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<marquee direction="left" loop="">Welcome to Acciojobs!</marquee>
-	<a href="https://acciojob.com/blog/https://acciojob.com/blog/">Blog</a>
-    <script type="text/javascript" src="./script.js">
+	<br>
+	<a href="https://acciojob.com/blog/">Blog</a>
+	<br>
+	<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
+    <br>
+	<a href="https://acciojob.com/blog/brute-force-vs-optimization/">We can say that optimization is one step further than the brute-force method of problem solving…</a>
+	<br>
+	<a href="https://acciojob.com/blog/brute-force-vs-optimization/"><img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px" alt="img1"></img></a>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
